--- a/model_buiding.ipynb
+++ b/model_buiding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -223,13 +223,147 @@
        "[8315 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>flat_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>address</th>\n",
+       "      <th>buildup_area</th>\n",
+       "      <th>which_floor</th>\n",
+       "      <th>furnishing</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>balcony</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6049</th>\n",
+       "      <td>2 BHK Flat</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>Mulund East</td>\n",
+       "      <td>1205</td>\n",
+       "      <td>lower</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8225</th>\n",
+       "      <td>1 BHK Flat</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>Goregaon East</td>\n",
+       "      <td>425</td>\n",
+       "      <td>lower</td>\n",
+       "      <td>Fully Furnished</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>2 BHK Flat</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>Kandivali West</td>\n",
+       "      <td>900</td>\n",
+       "      <td>lower</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5637</th>\n",
+       "      <td>2 BHK Flat</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>Byculla</td>\n",
+       "      <td>998</td>\n",
+       "      <td>lower</td>\n",
+       "      <td>Semi Furnished</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2606</th>\n",
+       "      <td>1 BHK Flat</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>Mira Road East</td>\n",
+       "      <td>725</td>\n",
+       "      <td>lower</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>574</th>\n",
+       "      <td>2 BHK Flat</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>Andheri East</td>\n",
+       "      <td>825</td>\n",
+       "      <td>lower</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       flat_type  price         address  buildup_area which_floor  \\\n",
+       "6049  2 BHK Flat   1.68     Mulund East          1205       lower   \n",
+       "8225  1 BHK Flat   0.40   Goregaon East           425       lower   \n",
+       "361   2 BHK Flat   2.35  Kandivali West           900       lower   \n",
+       "5637  2 BHK Flat   1.90         Byculla           998       lower   \n",
+       "2606  1 BHK Flat   0.78  Mira Road East           725       lower   \n",
+       "574   2 BHK Flat   2.25    Andheri East           825       lower   \n",
+       "\n",
+       "           furnishing  bedrooms  balcony  \n",
+       "6049      Unfurnished       2.0      0.0  \n",
+       "8225  Fully Furnished       1.0      1.0  \n",
+       "361       Unfurnished       2.0      0.0  \n",
+       "5637   Semi Furnished       2.0      0.0  \n",
+       "2606      Unfurnished       2.0      3.0  \n",
+       "574       Unfurnished       2.0      0.0  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample(6)"
    ]
   },
   {
@@ -254,17 +388,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(columns=['price'],axis=1)\n",
+    "X = df.drop(columns=['price','bedrooms'],axis=1)\n",
     "y = df['price']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +427,6 @@
        "      <th>buildup_area</th>\n",
        "      <th>which_floor</th>\n",
        "      <th>furnishing</th>\n",
-       "      <th>bedrooms</th>\n",
        "      <th>balcony</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -305,7 +438,6 @@
        "      <td>1550</td>\n",
        "      <td>middle</td>\n",
        "      <td>Fully Furnished</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -315,7 +447,6 @@
        "      <td>630</td>\n",
        "      <td>lower</td>\n",
        "      <td>Unfurnished</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -325,7 +456,6 @@
        "      <td>580</td>\n",
        "      <td>middle</td>\n",
        "      <td>Semi Furnished</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -336,7 +466,6 @@
        "      <td>middle</td>\n",
        "      <td>Semi Furnished</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -346,11 +475,9 @@
        "      <td>middle</td>\n",
        "      <td>Semi Furnished</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -365,7 +492,6 @@
        "      <td>1100</td>\n",
        "      <td>lower</td>\n",
        "      <td>Fully Furnished</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -375,7 +501,6 @@
        "      <td>280</td>\n",
        "      <td>lower</td>\n",
        "      <td>Semi Furnished</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -385,7 +510,6 @@
        "      <td>315</td>\n",
        "      <td>lower</td>\n",
        "      <td>Semi Furnished</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -395,7 +519,6 @@
        "      <td>706</td>\n",
        "      <td>middle</td>\n",
        "      <td>Unfurnished</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -406,11 +529,10 @@
        "      <td>lower</td>\n",
        "      <td>Semi Furnished</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8315 rows × 7 columns</p>\n",
+       "<p>8315 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -427,23 +549,23 @@
        "8313  2 BHK Flat   Kandivali West           706      middle      Unfurnished   \n",
        "8314  1 BHK Flat      Mulund West           500       lower   Semi Furnished   \n",
        "\n",
-       "      bedrooms  balcony  \n",
-       "0          3.0      1.0  \n",
-       "1          1.0      2.0  \n",
-       "2          1.0      2.0  \n",
-       "3          1.0      1.0  \n",
-       "4          3.0      3.0  \n",
-       "...        ...      ...  \n",
-       "8310       3.0      1.0  \n",
-       "8311       1.0      0.0  \n",
-       "8312       1.0      0.0  \n",
-       "8313       2.0      0.0  \n",
-       "8314       1.0      1.0  \n",
+       "      balcony  \n",
+       "0         1.0  \n",
+       "1         2.0  \n",
+       "2         2.0  \n",
+       "3         1.0  \n",
+       "4         3.0  \n",
+       "...       ...  \n",
+       "8310      1.0  \n",
+       "8311      0.0  \n",
+       "8312      0.0  \n",
+       "8313      0.0  \n",
+       "8314      1.0  \n",
        "\n",
-       "[8315 rows x 7 columns]"
+       "[8315 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,15 +1550,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9321501530342722 0.00740670315213192\n",
-      "0.49525898119350553\n"
+      "0.9311195139791681 0.008134726705594978\n",
+      "0.4965289692417955\n"
      ]
     }
    ],
@@ -1466,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1608,7 @@
        "                                                  [&#x27;address&#x27;])])),\n",
        "                (&#x27;regressor&#x27;, SVR(C=3))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">preprocessor: ColumnTransformer</label><div class=\"sk-toggleable__content\"><pre>ColumnTransformer(remainder=&#x27;passthrough&#x27;,\n",
        "                  transformers=[(&#x27;num&#x27;, StandardScaler(), [&#x27;buildup_area&#x27;]),\n",
-       "                                (&#x27;ohe&#x27;, OneHotEncoder(), [&#x27;address&#x27;])])</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">num</label><div class=\"sk-toggleable__content\"><pre>[&#x27;buildup_area&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">StandardScaler</label><div class=\"sk-toggleable__content\"><pre>StandardScaler()</pre></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">ohe</label><div class=\"sk-toggleable__content\"><pre>[&#x27;address&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">OneHotEncoder</label><div class=\"sk-toggleable__content\"><pre>OneHotEncoder()</pre></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-7\" type=\"checkbox\" ><label for=\"sk-estimator-id-7\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">remainder</label><div class=\"sk-toggleable__content\"><pre>[&#x27;flat_type&#x27;, &#x27;which_floor&#x27;, &#x27;furnishing&#x27;, &#x27;bedrooms&#x27;, &#x27;balcony&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-8\" type=\"checkbox\" ><label for=\"sk-estimator-id-8\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">passthrough</label><div class=\"sk-toggleable__content\"><pre>passthrough</pre></div></div></div></div></div></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-9\" type=\"checkbox\" ><label for=\"sk-estimator-id-9\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SVR</label><div class=\"sk-toggleable__content\"><pre>SVR(C=3)</pre></div></div></div></div></div></div></div>"
+       "                                (&#x27;ohe&#x27;, OneHotEncoder(), [&#x27;address&#x27;])])</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">num</label><div class=\"sk-toggleable__content\"><pre>[&#x27;buildup_area&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">StandardScaler</label><div class=\"sk-toggleable__content\"><pre>StandardScaler()</pre></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">ohe</label><div class=\"sk-toggleable__content\"><pre>[&#x27;address&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">OneHotEncoder</label><div class=\"sk-toggleable__content\"><pre>OneHotEncoder()</pre></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-7\" type=\"checkbox\" ><label for=\"sk-estimator-id-7\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">remainder</label><div class=\"sk-toggleable__content\"><pre>[&#x27;flat_type&#x27;, &#x27;which_floor&#x27;, &#x27;furnishing&#x27;, &#x27;balcony&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-8\" type=\"checkbox\" ><label for=\"sk-estimator-id-8\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">passthrough</label><div class=\"sk-toggleable__content\"><pre>passthrough</pre></div></div></div></div></div></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-9\" type=\"checkbox\" ><label for=\"sk-estimator-id-9\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SVR</label><div class=\"sk-toggleable__content\"><pre>SVR(C=3)</pre></div></div></div></div></div></div></div>"
       ],
       "text/plain": [
        "Pipeline(steps=[('preprocessor',\n",
@@ -1498,7 +1620,7 @@
        "                ('regressor', SVR(C=3))])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
